# UnderWritePro

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  netlify.toml  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js
api/: main.py
api/services/: chat.py
app/: main.py
app/models/: __init__.py  train_model_script.py
app/static/: index.html  test_data.csv
app/static/css/: chat.css
backend/: .env  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py  main.py  requirements.txt
backend/api/services/: chat.py
backend/app/: main.py  test_data.csv
backend/app/models/: __init__.py  credit_model.py  credit_scoring_model.joblib  feature_scaler.joblib  train_initial_model.py  train_model.py
backend/app/static/: test_data.csv
backend/src/underwritepro/: main.py
backend/src/underwritepro/models/: credit_model.py  feature_scaler.joblib  train_initial_model.py
backend/src/underwritepro/services/: chat.py
backend/src/underwritepro/static/: test_data.csv
backend/src/underwritepro/utils/: file_processor.py
backend/tests/: test_api.py
frontend/: .env.production  .gitignore  Dockerfile  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  test_data.csv  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json
frontend/deploy_dir/: 404.html  index.html  index.txt
frontend/src/: App.tsx
src/app/: generateStaticParams.ts  index.html  layout.client.tsx  layout.tsx  not-found.tsx  page.tsx
src/lib/: utils.ts
src/pages/: _document.tsx  chat.tsx  index.tsx
src/styles/: globals.css
src/underwritepro/: main.py
(+36 files in other folders)
