[tool.poetry]
name = "underwritepro"
version = "0.1.0"
description = "AI-powered credit scoring platform"
authors = ["Devin <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
python-multipart = "^0.0.9"
joblib = "^1.3.2"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.5"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
