[tool.poetry]
name = "underwrite-pro-backend"
version = "0.1.0"
description = "UnderWritePro Backend API"
authors = ["Devin AI"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
